--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.8.4",
+    "react-hot-toast": "^2.2.0",
     "react-intl": "^5.8.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.3.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@formatjs/cli": "^2.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -54,7 +56,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@formatjs/cli": "^2.11.3",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
