--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.8.4",
     "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.4.0",
     "react-intl": "^5.8.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.3.0",
