[son]: update checkbox, radio

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 PORT=3000
 ##PORT API DEV
 REACT_APP_API=http://localhost:3001
+REACT_APP_SERVER_URL=http://localhost:3001
 ##PORT API TEST
 #PORT_API=http://localhost:7524
 ##PORT API DEMO
