--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "extract": "extract-messages --flat=true -d=vi --locales=en,vi --output src/assets/languages 'src/**/message*.ts'",
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "postinstall": "husky install",
+    "lint": "eslint \"src/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "eslintConfig": {
     "extends": [
@@ -64,9 +67,20 @@
     "babel-plugin-react-intl": "^8.2.3",
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "6.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.1",
     "json-server": "0.16.3",
+    "lint-staged": "^13.0.3",
     "plop": "^2.7.4",
+    "prettier": "^2.7.1",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run lint",
+      "npm run format",
+      "git add ."
+    ]
   }
 }
