--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "postinstall": "husky install",
-    "lint": "eslint \"src/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\""
+    "lint": "eslint \"src/**/*.(ts|tsx)\" --fix",
+    "format": "prettier --write \"src/**/*.(ts|tsx)\""
   },
   "eslintConfig": {
     "extends": [
