--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "postinstall": "husky install",
-    "lint": "eslint \"src/**/*.(ts|tsx)\" --fix",
-    "format": "prettier --write \"src/**/*.(ts|tsx)\""
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "precommit": "lint-staged"
   },
   "eslintConfig": {
     "extends": [
@@ -78,6 +79,11 @@
   },
   "lint-staged": {
     "*.ts": [
+      "npm run lint",
+      "npm run format",
+      "git add ."
+    ],
+    "*.tsx": [
       "npm run lint",
       "npm run format",
       "git add ."
