--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "postinstall": "husky install",
-    "lint": "eslint --fix",
-    "format": "prettier --write",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "format": "prettier \"src/**/*.{ts,tsx}\" --write",
     "precommit": "lint-staged"
   },
   "eslintConfig": {
@@ -78,9 +78,10 @@
     "typescript": "^4.0.3"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}":[
-      "npm run lint",
-      "npm run format"
+    "src/**/*.{ts,tsx}":[
+      "eslint --fix",
+      "prettier --write",
+      "git add ."
     ]
   }
 }
