--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "postinstall": "husky install",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "format": "prettier \"src/**/*.{ts,tsx}\" --write",
+    "lint": "eslint --fix",
+    "format": "prettier --write",
     "precommit": "lint-staged"
   },
   "eslintConfig": {
@@ -79,8 +79,8 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}":[
-      "eslint --fix",
       "prettier --write",
+      "eslint --fix",
       "git add ."
     ]
   }
