--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}":[
-      "prettier --write",
-      "eslint --fix",
+      "npm run lint",
+      "npm run format",
       "git add ."
     ]
   }
