--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "postinstall": "husky install",
-    "lint": "eslint --fix",
-    "format": "prettier --write",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "format": "prettier  \"src/**/*.{ts,tsx}\" --write",
     "precommit": "lint-staged"
   },
   "eslintConfig": {
@@ -80,8 +80,7 @@
   "lint-staged": {
     "src/**/*.{ts,tsx}":[
       "npm run lint",
-      "npm run format",
-      "git add ."
+      "npm run format"
     ]
   }
 }
