test lint-staged 10

--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "npm run lint",
-      "npm run format"
+      "npx prettier --write",
+      "npx eslint --fix"
     ]
   }
 }
