--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "npx prettier --write",
-      "npx eslint --fix"
+      "prettier --write",
+      "eslint --fix"
     ]
   }
 }
