--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "prettier --write",
-      "eslint --fix"
+      "npm run lint"
     ]
   }
 }
