--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "test": "react-scripts test",
     "postinstall": "husky install",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "format": "prettier \"src/**/*.{ts,tsx}\" --write",
-    "precommit": "lint-staged"
+    "format": "prettier \"src/**/*.{ts,tsx}\" --write"
   },
   "eslintConfig": {
     "extends": [
@@ -78,9 +77,6 @@
     "typescript": "^4.0.3"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "prettier --write",
-      "npm run lint"
-    ]
+    "src/**/*.{ts,tsx,js,jsx}": "eslint --fix"
   }
 }
