--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   },
   "husky": {
     "hooks": {
-      "prepare-commit-msg": "./githooks/script.sh"
+      "prepare-commit-msg": "./githooks/script.sh $HUSKY_GIT_PARAMS"
     }
   }
 }
