--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
   },
   "husky": {
     "hooks": {
-      "prepare-commit-msg": "./githooks/script.sh $HUSKY_GIT_PARAMS"
+      "prepare-commit-msg": "echo \"[Husky] pre-commit-msg\"",
+      "pre-commit": "echo \"[Husky] pre-commit\""
     }
   }
 }
